# KaryoScope-plotlib

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ECOSYSTEM.md  migration_guide.md  mpl_audit.md
src/karyoplot/: __init__.py  _version.py
src/karyoplot/core/: __init__.py  chromosomes.py  colors.py  coords.py  fonts.py  io.py  sample_metadata.py  text.py  theme.py
src/karyoplot/mpl/: __init__.py  comparison.py  data_loader.py  heatmap.py  legend.py  statistics.py  style.py  types.py
src/karyoplot/svg/: __init__.py  drawing.py  export.py  ideogram.py  legend.py  reads.py  tracks.py
tests/: test_core.py  test_core_text.py  test_mpl.py  test_palette_loaders.py  test_sample_metadata.py  test_scale_helpers.py  test_smoke.py  test_svg.py  test_svg_reads.py
