[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "karyoplot"
version = "0.1.0"
description = "Shared plotting library for KaryoScope analyses (drawsvg + matplotlib backends)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Floris Barthel", email = "fbarthel@tgen.org" },
]
dependencies = [
    "drawsvg>=2.0",
    "matplotlib>=3.5",
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "pillow>=9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["karyoplot*"]
