[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "karyoplot"
version = "0.1.0"
description = "Shared plotting library for KaryoScope analyses (drawsvg + matplotlib backends)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Floris Barthel", email = "fbarthel@tgen.org" },
]
dependencies = [
    "drawsvg>=2.0",
    "matplotlib>=3.5",
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "pillow>=9.0",
    "pyyaml>=6.0",
    "adjustText>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pre-commit>=3.5"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["karyoplot*"]

# --- ruff (linter + formatter) ---
# Config mirrors the sibling KaryoScope-analysis repo so the ecosystem lints
# identically. The ruff version is pinned in .pre-commit-config.yaml (the single
# source of truth), matching KaryoScope-analysis (v0.15.13).

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "PTH", # flake8-use-pathlib
  "RUF", # ruff-specific
]
ignore = [
  "E501",  # line length handled by formatter
  "B008",  # function calls in argument defaults (click uses this idiomatically)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow `assert` in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
