[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "karyoplot"
dynamic = ["version"]
description = "Shared plotting library for KaryoScope analyses (drawsvg + matplotlib backends)"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
  { name = "Floris P. Barthel", email = "fbarthel@tgen.org" },
  { name = "Timothy Rhyker Ranallo-Benavidez", email = "rranallo-benavidez@tgen.org" },
]
maintainers = [
  { name = "Floris P. Barthel", email = "fbarthel@tgen.org" },
  { name = "Timothy Rhyker Ranallo-Benavidez", email = "rranallo-benavidez@tgen.org" },
]
keywords = [
  "bioinformatics",
  "genomics",
  "karyotype",
  "cytogenetics",
  "telomere",
  "visualization",
  "plotting",
  "T2T",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]
dependencies = [
    "drawsvg>=2.0",
    "matplotlib>=3.5",
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "pillow>=9.0",
    "pyyaml>=6.0",
    "adjustText>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "pre-commit>=3.5",
]

[project.urls]
Homepage = "https://github.com/barthel-lab/KaryoScope-plotlib"
Documentation = "https://github.com/barthel-lab/KaryoScope-plotlib#readme"
Repository = "https://github.com/barthel-lab/KaryoScope-plotlib"
Issues = "https://github.com/barthel-lab/KaryoScope-plotlib/issues"
Changelog = "https://github.com/barthel-lab/KaryoScope-plotlib/blob/main/CHANGELOG.md"

# --- hatchling configuration ---

[tool.hatch.version]
path = "src/karyoplot/_version.py"

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "tests/",
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
  "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/karyoplot"]

# --- ruff (linter + formatter) ---
# Config mirrors the sibling KaryoScope-analysis repo so the ecosystem lints
# identically. The ruff version is pinned in .pre-commit-config.yaml (the single
# source of truth), matching KaryoScope-analysis (v0.15.13).

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "PTH", # flake8-use-pathlib
  "RUF", # ruff-specific
]
ignore = [
  "E501",  # line length handled by formatter
  "B008",  # function calls in argument defaults (click uses this idiomatically)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow `assert` in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- pytest ---

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/karyoplot"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
